# JPEGCompressionCUDA

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  main.cu  main_streams.cu  pycpu.ipynb  pycpu.py
src/images/: slax.jfif
src/state of the art/: cpu.cpp  gpu.cu
